@@ -32,6 +32,7 @@ GtkItem::select has_emitter="1"
 GtkItem::toggle has_emitter="1"
 gtk_list_store_new ellipsis="1"
 gtk_list_store_insert_with_values ellipsis="1"
+gtk_list_store_set ellipsis="1"
 GtkMenuItem::activate has_emitter="1"
 GtkMenuItem::toggle_size_allocate has_emitter="1"
 GtkMenuItem::toggle_size_request has_emitter="1"
@@ -64,6 +65,7 @@ GtkTreeModel::row_has_child_toggled has_emitter="1"
 GtkTreeModel::row_inserted has_emitter="1"
 GtkTreeModel::rows_reordered has_emitter="1"
 GtkTreePath is_value_type="0"
+gtk_tree_store_set ellipsis="1"
 GtkTreeSortable::sort_column_changed has_emitter="1"
 gtk_tree_view_insert_column_with_attributes ellipsis="1"
 GtkTreeView::row_activated has_emitter="1"
